Fix visibilty toggles, set height:auto on validation list items

--- a/src/app/pages/form-validation/form-validation.component.scss
+++ b/src/app/pages/form-validation/form-validation.component.scss
@@ -14,6 +14,10 @@ mat-form-field {
     margin-bottom: 32px;
 }
 
+.validation-list mat-list-item {
+    height: auto;
+}
+
 .validation-message {
     padding-left: 8px;
 }
